# air_manipulator

am_controller/: CMakeLists.txt  package.xml
am_controller/action/: trajectory_para.action~
am_controller/launch/: port_set.yaml  servo_calibriation.launch
am_controller/src/: asdbf  serial_ros_flx.cpp  servo_calibriation_pub.cpp  servo_seter.cpp  trajectory_controller.cpp  trajectory_planner.cpp  trajectory_planner_test.cpp  trajectory_task_flag_puber.cpp  workspace_test.cpp
am_controller/src/nsga2/: NSGA2.cpp  example  global.cpp
am_controller/src/nsga3/src/: gnuplot_interface.cpp
am_controller/srv/: servoset_srv.srv
fly_path/: CMakeLists.txt  package.xml
fly_path/launch/: fly_path.launch  rc_path.launch  tango_pose.launch  vrpn_pose.launch  vrpn_pose.launch~
fly_path/src/: Path_line_test.cpp  fly_path.cpp  path_rc_test.cpp  tango_pose.py
hand_eye_calibrate/: CMakeLists.txt  package.xml
hand_eye_calibrate/launch/: hand_eye_cal.launch
hand_eye_calibrate/src/: hand_eye_cal_sub.cpp
hithesis-master/: main.tex  main.toe  reference.bib
hithesis-master/body/: introduction.tex
hithesis-master/front/: cover.tex
image_pub/: CMakeLists.txt  package.xml
image_pub/src/: image_pub.cpp  stereo_image_pub.cpp  zed_image.cpp  zed_image.cpp.bak
monocular_servo/camera_control/: CMakeLists (副本).txt  CMakeLists.txt  CMakeLists.txt~  package.xml
monocular_servo/camera_control/include/: target_path_track.hpp
monocular_servo/camera_control/launch/: am_path_nav.launch  camera_servo.launch  camera_test.launch  global_control.launch  global_rc_path_plan.launch  port_set.yaml  target_endeffector_track.launch  target_path_track.launch  target_tracker.launch  yaw_test.launch
monocular_servo/camera_control/msg/: CameraPos.msg  World_pose.msg  do_trajectory_task.msg  mav_vel.msg
monocular_servo/camera_control/src/: camera_servo.cpp  camera_servo_action.cpp  easy_grasp.cpp  global_control.cpp  global_rc_path_plan.cpp  global_rc_path_plan_dynamic.cpp  rc_state.cpp  target_endeffector_track.cpp  target_path_track.cpp  target_tracker.cpp  target_tracker_bf.cpp
monocular_servo/camera_control/srv/: ServoPos.srv  TagLost.srv  rc_state.srv  set_interest_ID.srv
monocular_servo/ffcalibration/: CMakeLists.txt  OpenCVConfig.cmake  OpenCVModules.cmake  ost.yaml  ost_c.yaml  package.xml
monocular_servo/ffcalibration/launch/: auto.launch  camera_ins.launch
monocular_servo/ffcalibration/src/: ffcalib.cpp  fly_path.cpp
monocular_servo/src/: speed_test.cpp_sub.cpp
path_planning/: CMakeLists.txt  ompl-config.cmake
path_planning/src/: goalpoint_transformer.cpp  old_path_planning.cpp  path_planning.cpp  scaling.cpp  trajectory_generator.cpp  transform.cpp
pbvs/: CMakeLists.txt  frames.gv  ost.yaml  package.xml
pbvs/cfg/: para.yaml
pbvs/launch/: global_dynamic_grasp.launch  mani_gen.launch  my_pbvs_camera.launch
pbvs/msg/: apriltag_info.msg
pbvs/src/: apriltag_kevin.cpp  apriltag_kevin_node_sub.cpp  dynamic_grasp_sub.cpp  eigen_test_sub.cpp  global_dynamic_grasp_sub.cpp  kdl_trajectory_sub.cpp  mani_tra_gen_sub.cpp  pbvs_node.cpp  pbvs_node_sub.cpp  uav_speed.cpp
qfy-fflocking_algo-b3ce057dcc8d/: CMakeLists.txt  README.md  package.xml
qfy-fflocking_algo-b3ce057dcc8d/cfg/: FlockingAlgo.cfg
qfy-fflocking_algo-b3ce057dcc8d/include/fflocking/: flocking_algo.hpp  planning_ros.hpp
qfy-fflocking_algo-b3ce057dcc8d/src/: flocking_algo.cpp  flocking_node.cpp  planning_ros.cpp
qfy-fflocking_algo-b3ce057dcc8d/srv/: Planning_qfy.srv
qfy-fflocking_algo-b3ce057dcc8d/test/scripts/: qfy_visualize_marker.py  static_pose_pub.py  test_subscriber.py  visualize_debug.py
uav_body_convert/: CMakeLists.txt  package.xml
uav_body_convert/launch/: UAV_body_convert.launch
uav_body_convert/src/: uav_body_convert.cpp
vrpn_client_ros-indigo-devel/launch/: sample.launch
